# ChangeLog for app-crypt/easy-rsa
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/easy-rsa/ChangeLog,v 1.8 2013/05/23 17:15:04 ago Exp $

  23 May 2013; Agostino Sarubbo <ago@gentoo.org> easy-rsa-2.2.0.ebuild:
  Stable for amd64, wrt bug #470678

*easy-rsa-2.2.0-r1 (22 May 2013)

  22 May 2013; Dirkjan Ochtman <djc@gentoo.org> +easy-rsa-2.2.0-r1.ebuild,
  +files/no-licenses.patch:
  Don't install license files as docs (bug 470888).

  21 May 2013; Dirkjan Ochtman <djc@gentoo.org> easy-rsa-2.2.0.ebuild:
  Clean up eclasses (fixes bug 470888).

  04 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> easy-rsa-2.2.0.ebuild:
  Keyworded ~arm, wrt bug #453782

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> easy-rsa-2.2.0.ebuild:
  Add ~ppc, wrt bug #453782

  24 Jan 2013; Jeroen Roovers <jer@gentoo.org> easy-rsa-2.2.0.ebuild:
  Marked ~hppa (bug #453782).

  24 Jan 2013; Dirkjan Ochtman <djc@gentoo.org> easy-rsa-2.2.0.ebuild:
  Block <openvpn-2.3.

*easy-rsa-2.2.0 (24 Jan 2013)

  24 Jan 2013; Dirkjan Ochtman <djc@gentoo.org> +files/65easy-rsa,
  +files/easy-rsa-2.0.0-pkcs11.patch, +easy-rsa-2.2.0.ebuild, +metadata.xml:
  Initial version 2.2.0 (bug 409579, thanks to alon.barlev@gmail.com).