@@ -1,28 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 65easy-rsa 37 SHA256 685842f170ec8ce19be9de1681ec8f8121e677e6b3bcd21dea89b843e68e2839 SHA512 2f8c4f489ebd2ad2e5a0d45351361ecfc06a9481d9e15ea48215addb82ddf2083a85acb0a5c171d0c7e5406152d3679a5a7835e22ba9953e554614d94026d778 WHIRLPOOL b757f05f78d1e780b5991e5b19889d2692be188fc58e67a9606ca6334b0452d63302c4c5e556f2fdb542c6d86026e0f31c76845607b275f14e0875b1c518f303
 AUX easy-rsa-2.0.0-pkcs11.patch 1184 SHA256 100d545927d2bc4395f96777f1e5f0e577bb71edf3d452e91885da4229c7cb79 SHA512 eff515f5fb17e8e95c93cc6af01fc9f24d0baa83e6d44a8c0c8852150ca7d2b224f35c7b5d970908da8f151f63ddf2ae5c589be44b79d72d4af4628262da187d WHIRLPOOL fad0e2c42ea93c896c6b6dbfdcac9241051109f27a011f283c64844b0e050a5b72cd8db4cbbb146eeeb1d69256b934c5f9251c5a8f1240e532a1c52ab0ba8636
 AUX no-licenses.patch 287 SHA256 8da35dac58322549c63ff491bb787e5f44f661fdb8c57b08ecfe0ba0ea70ab78 SHA512 1b1a40b9f1164b2524bf317da2147e92cc7eb97ae33fc27f94cd0b851db958f2f0c3c5d2b56e62b08d7895c23461ac1848e0f623473eb33e6c18a1f2603aefb8 WHIRLPOOL fef2d68d6fcfb40e66cf1da0ced7ea0cd16f782bbbaf45599c9295a8bed18bb642efad82a341c899201f51fa017aae9045cd6cf2b05326cc1de9a1e5575cc968
 DIST easy-rsa-2.2.0_master.tar.gz 80460 SHA256 d23ddc3a764b40d03ada76f387c92ae4dcf4f5266da54c2bae130325b05eebe2 SHA512 81b5d6e805c5d9fcadf6425dbc311b6a151d857cb837ce9b419b653ee546e5742d13864d25e9ab8caffee95e5116d1611323288e80c65c3c88730533919e2fb4 WHIRLPOOL ff65ca8e3b47123aa3765937d508682afe51c9831e8dbc3e57cb5000088cc69ad5e086618e647e90677481c2d5e7d34733fd7ba50a067810e1a42c876d348823
-EBUILD easy-rsa-2.2.0-r1.ebuild 885 SHA256 c60a0d76285999915c8a887854df895b5cd4309be9767fa6f865fcc8219276a3 SHA512 a14f4dfc4095a83349e05749ab37b97dafc1b11b16051f90b07f6a6ffdcf83dd6aee78db33a5c70598de3c6d9739fc3320b70ab1b43c4952c2d728245aea0251 WHIRLPOOL 5b92706e333f912cd557ee0b54b638168f3ced1d549e7207cc665feffe090952b77246e4e0b5e01170ef4444c459ca82c9d3d384c36fafafe0b03344738545ee
+EBUILD easy-rsa-2.2.0-r1.ebuild 884 SHA256 2accf55ce66e6a5b1444011fed39b886f55eb3f818b691562a13e6e1f60926a6 SHA512 e96f554515efee1460aca986eb3b1e28c242b53472f7f24bd58575d24f9bb84aa2866b06ff33d54cf9ae1f1debd0890fe0823637e8b6d7a0f4457fdad28ec104 WHIRLPOOL 6546499d2f0ede59bf66a345b31002d5ae7d7135b54895cca750499e9a90f9c754870402368abee8bc490e68f299ec6c37f03adf06fe90671590afb123fe4dbb
 EBUILD easy-rsa-2.2.0.ebuild 841 SHA256 21fee7b331f504e522ca58473746aa3dcafa2137969972506d89b47fd988558a SHA512 f4ab4155b5ad82f9c1bdbb8e9223a1102e5ec4c64295621843ffad43273c1132c618a31d3a96743e03f880357bde83a7c43ac89c158b963bef6bf826921ec898 WHIRLPOOL 5f03a70faa10fea9ddd617fe34701ea75749aed40074d8c6ddc2213de3f0f9c020873bfe7a99448e79681f387487986b31d5d85163402bab1a2b7bdbfc0fd17a
-MISC ChangeLog 1267 SHA256 c0d9acad980015a5c88cdeb38efd7ee29dc66a036336b2a96296603f4cecdfc0 SHA512 b3cb8231c97f79480d6937443b777bbe20f126d0cea449304129fa85c4359b81f0cf79130dd4e2e8c8f611be728fc3a6d5afce1c488d29751f1c2eca604fb559 WHIRLPOOL 1410d376d36001254b9641e4a14c9fa90d4b7219865bf3d6e1b874ba13d2f95f00a5d98806b14da73d8566d8a6e01f4ef99da42cdffcdfc484d19c63fcb73c0b
+MISC ChangeLog 1374 SHA256 23ad74dab4b03cb07509e66cc805d2928c6db906228b9ae840ea687051a6baec SHA512 aeeeb791f58d01cb26c570e277d656ab862924899f555551c7bd6de88a209007ac2166966ee897d2dbadae5c9ef911315aa9ae82335b1b454536c352e968c5aa WHIRLPOOL e12e399bdc309c478d11f8bf27d2a4b54427e8e13f3f166b174eec0a4f5045012a6f161957257649aec5e1306592b757971cfeaf5424eac04d4729d660f8ce1e
 MISC metadata.xml 237 SHA256 f768d449802f509a6b82eff5e92f162e092db7e4859119a00a7f053c930d8a25 SHA512 babb5d56272909a65ad21a565d59c736d360ed2997c7f8ab3ec2b2d66c8cbddeb20968315040e3e504befd75a729eb61ad50e8cd69349c14de049a54dd47908b WHIRLPOOL 60d2aa6cad87dbb33a1e05f9fc5890810988d08cb50af5ca290e3b3de4d9d1baeeb6ac34faf81d4a79d55ac59109a2f1652ada77efbac72b519dad08a566e542
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRnk6UAAoJELp701BxlEWfGhgP/3I9PZv2B5UYsCEBVqw+RLGs
-bWHSaUwYYBCvMsLanlaqRjSYMNUSGLiSmPU9P3287vfcybP2TWe9Flv0flZIpbbk
-Q7uu6RbR/n9rz9RZ4zFnfI02kSqoTstTliqxLqKf7UjMFQx53FoTl49wD79MU4uY
-GPk61o+y/wo5v8MDjAwjo9EbYizEy2xXDNq+ebHr7pasX/bFeX2Hoz4AmWRlpey2
-zzrkVnVLogBNbPiDHejL9zDWAwi23cwd21RAMpAGF/4ILsCuzST7DmehCt2rQGVZ
-hvVleAVHB20PYDQZ0LyKWHRe7iKXC/7lGxjv3CZsP17PF5UbgZtc6c9RCHHA8ZA3
-E+tHBCIKlMYRMc/J+GAQXJllpXHYHJR8k9no7CRmGJiTPTSKppjfTgOmn9JQ3/WG
-40qyxuQA0PzC4AUJwj1R24HaRJIIIcGhvKCKeCpwpX0xNMcAQ1G+XWnIfhXlAzMg
-ETyCO38icUMcWaIyplyBlTIcX7lZ9PeCTXBGeSdEZpY3t49PhWzBn+F5VCaBd72W
-niNCg2/PxQ/74195G+cy/F4SzfnpkpNH/WunbIRbkDr9PxB9/R3TbSY5TBOfi2HF
-AD4AuUNLr0JQ50kCjg8VGp4u9UZk5mEoF5xjWFe+QOC1Z+cZhf0+U+fzE8b15bZ8
-uUd1rTsusx1nXW+Dkssd
-=Dtg8
+iEYEAREIAAYFAlGg8+MACgkQVWmRsqeSphPhmgCdE2C9taLwMl529qKsUPYAwzdg
+SnkAnjZgpRzYa7vBdeuZdwWvZTE9o4NX
+=IpfZ
 -----END PGP SIGNATURE-----
