@@ -1,26 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX libconfig-1.4.9-out-of-source-build.patch 620 SHA256 8e77595bdcb92832d35a74bca2877d6450ce06c7a2ec437a2aac17df4264e78b SHA512 41444f4d70a52fd315edec1990d272f823bb5fb89cb901451095a78a05d694c823fb167ce569cd4bbf0e65c42dc68aa0ddf1d343540b83942cba0a50b34a77b7 WHIRLPOOL 88f1cf86c3fe23a1feb8a89743e7066646689feae8f8b51e86c8ffeb287fc9fba5f21d31936fd68f809fe41e6d6621377d506fe5e54e68ec14957fec52251cfc
 DIST libconfig-1.4.9.tar.gz 688158 SHA256 09c8979252e60193e2969e9b0e1cd597f7820087867989b2f0939ad164473041 SHA512 49a4318c1b8a5f15dc0cefaf25c481f95008e413696420d5e8cacb7a6ce7e600b84c4b7e7365373cee62e392e14556ff31d65c1e084a9b7ab2153a55cbf787a7 WHIRLPOOL 3d64dfb7cfd21c769738791236d6f6f4b01d296d060c21767f441f644b0d0bba62b5782bd7129dcc2657377200e59a345a5f197a67b5579e2193447fdefc1d25
 EBUILD libconfig-1.4.9-r1.ebuild 1392 SHA256 ec33aac075b80eac13487c1fbef88ff1e722b814f8cf52b91f4fb095f2150b17 SHA512 ddea433d8c20867d1c6250a945088eb2660629802dc04b1b17b4c87358dff0e5a2d00371d7f9dae36f4cf56bf8facd2e617bbfde0dc3bea877f7bc5e1365d6bf WHIRLPOOL 5d6d8cccef92568c6d9ae2f09585666c41fe75ccc51a66169303a4ec4e217376d78961f79db63b46ce79f2169ba36c8d58f4bf7ed36fd29540dea6f08e5f3698
-EBUILD libconfig-1.4.9.ebuild 988 SHA256 77b69b167b9fdb55151ae9cbd24420aa05e8f854a7f459a8ba502a713d94e9b3 SHA512 062e7e0bd3541572e35c169c447b2e11b1af32b38370339a5a87e354509a7735517e3db6b0f6da5897a29c2a7609ed5d966c0534fb03b2326b71a80f051a03b6 WHIRLPOOL 11043a5d66dc50f079e3673e546c87faad9c8885f065e7534a3d87c8469d5c99b5eb5984f6067a9e1db7adc131fae5fd404b4cd2da495da02e1fbf35f6a6638e
-MISC ChangeLog 7299 SHA256 ea0f60229394b78ca1bcd9fad491b112fcc2db17b443080884e7c94ca3182ae2 SHA512 38cf208c8b8f7799091e81a3d756c11a3190e1edc23ffa587417a540ebdb8e72e3c3912f2368515e9a52fb47c9ec48fcbe5ddbceab2b4ca4fbabfd8364560543 WHIRLPOOL 3f4b75163d72f63f4130f8d1ad4ceb470d0ee4f3a53bc48fbc6c3cf2fbffde1842d6bf8e8b52cd85909e0b183c1fd9e64958d18df8ba9fc1d72c8a7ef5bd5ba0
+MISC ChangeLog 7379 SHA256 c587e905f0e630b65c832f244d39369a007758e8f89d1c0e602d0ddb6146a91c SHA512 0b28e668a2ca0762d8a01441ea7b16b62028fe89d64fd8765504abad1e08ac426ef5259086a51ed2201c804929e9336fd143a05378482f7eeeb5e26e535b2705 WHIRLPOOL caf574400ecf0c0ffb9370b273927602c4bc6e0a39daaf0b9e17520d921d7f810df62636ec28c172c1aa571ce7688ba1797f5f3249615bb18ba42b2eb36a0ef4
 MISC metadata.xml 359 SHA256 f400193374a2ce7e2f8a0f047d088e8cb77c29690ecf78f3029f7b95a8d5ce3a SHA512 9c8018420c129b28070c6067a5ae2fcff2de22b2c3164d2a6e676e81688758f4d68268af2b62439e0d8ae9bf391a4f8e6a8f59329a92fac1935cd57baf1fd229 WHIRLPOOL 0323daadda8cf1a61bcbf22fe8fbe355b26686a13b43884e0751df26ac01a97f90bf54b7c4b3f9a1ac13852d46c801fcda10105f7e1968d12bdec9830b739220
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRoG9qAAoJELp701BxlEWflc8P/1FK2YtJsXJjj8mzMmFZDh4+
-tIXtlb36HEpHYx0RTxX2H4q0DBLqycp/FOykCS9P9T0XzW/WB/HiZ0kpVCNLSsrk
-rMSBEfziRanGKSgk6me3uX8vq2n7P+iClQ10rnxIp7ZKRLGUdpdSD1Ay9QkrSoV+
-W9frZnlMclBK/A0uzJZ1/XC1fVQudtwwQSmgoi/+d2EIpF7Kmeb7euIux5++cIaR
-eWU42KsS9sM35dMnNufenoI3IhNyGcWBZQNxMPNsV3K508CHWscnnwk32fjoiChx
-VZNK2GeRVg3XAXvatLUSSGO8Nc045cccADsT/DlmcopF/M/Njg68qbad6I///85v
-rPMGzRWTi0TBPPjBa2tvwUUHptIKSqdpInujqpvCD6TpHj8VzSzksi47ZJzhke7g
-i0z1TrWQjCvG2EpSdOohMR0mjZruAaBJvmHs6pGw8IQR3hSMpkRJU9CS4xuasSLs
-eEPa5itRd9rqskDLFlWf6A7G50+VuCfFN5JkGcYZB5DZU5XIuUdiiA9OlCrAKUzK
-HeLSPMJCjGm+0/kgeWGRDgBq4Pj5gZTDbQRUNZ0T+GXhbBPQF1/h6J7z7hYUokcb
-QdrmUjG3HD39xtlPjFWkwItbfsbSf1JrDyxo58kert/OKmD9MtNkgA4Di9+Kdmde
-n+4OCgSoqEA+vgLfyXPh
-=NaPh
+iEYEAREIAAYFAlGg3L4ACgkQVWmRsqeSphPN0ACeInc4Kl0XDZ8Novp5wSfAuvtl
+zkYAn2xAq0JfoqCz476mXfWwHXm7zfFS
+=64Gf
 -----END PGP SIGNATURE-----
