@@ -3,10 +3,10 @@ DEPEND=>=dev-libs/openssl-0.9.6
 DESCRIPTION=Small RSA key management package, based on OpenSSL.
 EAPI=4
 HOMEPAGE=http://openvpn.net/
-KEYWORDS=~amd64 ~arm ~hppa ~ppc ~x86
+KEYWORDS=~amd64 ~arm hppa ~ppc ~x86
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/openssl-0.9.6 !<net-misc/openvpn-2.3
 SLOT=0
 SRC_URI=http://swupdate.openvpn.net/community/releases/easy-rsa-2.2.0_master.tar.gz
 _eclasses_=eutils	f31a0ec0d081047cbf9c0bbb4822d831	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ea08311417ff7c0f8e20fdae1b9787a1
+_md5_=6884f7c2e15d5d703b8c4f08439ca7fa
