@@ -1,12 +1,0 @@
-DEFINED_PHASES=configure install test
-DEPEND=sys-devel/libtool sys-devel/bison
-DESCRIPTION=Libconfig is a simple library for manipulating structured configuration files
-EAPI=4
-HOMEPAGE=http://www.hyperrealm.com/libconfig/libconfig.html
-IUSE=examples static-libs
-KEYWORDS=amd64 ~mips ppc ppc64 sparc x86 ~x86-linux
-LICENSE=LGPL-2.1
-SLOT=0
-SRC_URI=http://www.hyperrealm.com/libconfig/libconfig-1.4.9.tar.gz
-_eclasses_=eutils	f31a0ec0d081047cbf9c0bbb4822d831	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8177caf4209739d7e1fd273d4f118330
