@@ -4,10 +4,10 @@ DESCRIPTION=A free routing daemon replacing Zebra supporting RIP, OSPF and BGP
 EAPI=5
 HOMEPAGE=http://quagga.net/
 IUSE=bgpclassless caps doc elibc_glibc ipv6 multipath ospfapi pam +readline snmp tcp-zebra
-KEYWORDS=alpha amd64 ~arm ~hppa ~ppc ~s390 sparc x86
+KEYWORDS=alpha amd64 ~arm hppa ~ppc ~s390 sparc x86
 LICENSE=GPL-2
 RDEPEND=caps? ( sys-libs/libcap ) snmp? ( net-analyzer/net-snmp ) readline? ( sys-libs/readline pam? ( sys-libs/pam ) ) !elibc_glibc? ( dev-libs/libpcre ) sys-apps/openrc sys-apps/iproute2
 SLOT=0
 SRC_URI=mirror://nongnu/quagga/quagga-0.99.22.1.tar.xz bgpclassless? ( http://hasso.linux.ee/stuff/patches/quagga/ht-20040304-classless-bgp.patch )
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	7c11ec0c4b75b50282ec943ef9df2b17	eutils	f31a0ec0d081047cbf9c0bbb4822d831	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=d25d34a3c7c4266df07108e504d2e4d8
+_md5_=6ab0558c5a4f90750de5a7db4209d4e9
