@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX quagga-0.99.21-fix-no-ipv6.patch 3144 SHA256 905478424846456138fa194fee40ffd773d58ee0c68424fc0f5b986abfd0044e SHA512 8d05e60c980b207dd4a0e59f8bc95f687e16c521a41aeda542beb68ae23bc0e4f416c46521d902b188903fbde858479d8dbe6e02585508d9ab3326b29a277be4 WHIRLPOOL c1dd29bd9a7f3cd1c00f31a0d80d2728ae97cdf45040605064470070bf0b6989d7f18331b243b8c9784b78bdba292da2e48a02ccce8e5a3b9988b6d7f4331081
 AUX quagga-link-libcap.patch 1027 SHA256 33bbab3490852b32f38437d50d64fcbb2a98e063503ccc46dd75cd350187853f SHA512 bc87b14432af75bc6e1bb27a7f90f0a05ddd98c6b554ef53535a2fc8e43f49c76762c8a0c240323817fdbb4e1ce29b868da7b768c597acce919febe8f040ec78 WHIRLPOOL 6be7d422ecdd4166c2bf22d8a2dbfdbdbcee9bb4d3af1d189457e3dda8d2746466533789c23f18ce9f726daf2c89b2b731675a8222d8957fb4410b550e24964f
@@ -17,24 +17,14 @@ DIST quagga-0.99.22.tar.xz 1595948 SHA256 50336547ed53a03a3fa9130de5721fb916c40f
 EBUILD quagga-0.99.20-r1.ebuild 3422 SHA256 575e977e42fcb57ca53d4c517f1e2bea934029d3132a90beb29da95d095fb158 SHA512 9e4479d62834e0f3b142806f82b602d6814d24614b1a538d178cda5fd418095162bfa93f4840ff418d262bfad5057df026114a2da6c9e6630199de6583f73bf2 WHIRLPOOL b2bc5616c7453bb5cf21f80353afcad29a094514b89d421e93ab0dadcd0fb67b0c2d65b2d24fe19d3a33b68d83f329a4e3ff26673f6f98566d037f0196305185
 EBUILD quagga-0.99.20.ebuild 3437 SHA256 f51edb691ca50079db8fd514b8616beb26c32722f9b938024aa7b4ac42740cdd SHA512 874d29a54ada41bb3c20bf8a8deebeed9b0f6c555b8cd0d28f161e5867ac983e3a5765381705060b5bddd6ad895111633e5219b61d066d9d18eec89be6e46bff WHIRLPOOL c57dcf0b8341fa000d592a8c4cbe52707545a0e3cb5f0c6d6ba1a4357694a2b582149e1bdb1bf83aa9054824c1fb2b0c026877e65a710464dfa504a3cdd421a0
 EBUILD quagga-0.99.21.ebuild 3616 SHA256 8564605e9b6c1b77a6a48bda831e57915527d88076b62f77d22cf0b433511447 SHA512 33ac2bab33d7b6e1f214af849a217086884a1f30eb02d6fbfaba1e43a7f1f97a6999fda084e7ec2c15db674cf0ec6e5e7b43db9540b68c8c81bf0391335e6110 WHIRLPOOL e7e78bd44fe27e53fe52f521ec8d3942cede9e5ffd662599dd662448e9dc43a33160a84a67f72d7c3ba25dffeacaf271f65f0988e173417a36b038382ad9d794
-EBUILD quagga-0.99.22.1.ebuild 3302 SHA256 dd4119f9cf2009f9f86a1e1258875c770fc7898a9bccae5e31b7c82ef9eab77b SHA512 be7d65ef72fd3464f981717046ab80c75c0b2ea964e40f72b0cbdfc3aa68516938a1f68094d823025a8dc482e6aebd22c021bb192244fca7baa57e2bbfee1d07 WHIRLPOOL e7e8b4ad53c533da009cc7d83cce5c6226804534fb57445bcfc9b4052d8161b16dda5a398d33d191cfb1c626f27f76cba2164d4b12962abb0d7e1d7d73fd8c50
+EBUILD quagga-0.99.22.1.ebuild 3301 SHA256 af87902d818fac5ddddf7fccc2c907aeabe1844a2e6c6f58681574de519e4e79 SHA512 f643872c17ecf216ca80cf8d71e7125c4e124a69b644961eae8e15f4f19de0d6fc6f61da2fd4daed74718cb0b400ad3b4eed9bf747720d175cd8b26f47aafc25 WHIRLPOOL 26b3b8efe123fbf0711e22492e8916e7480fbf16fa3652695a26ed981d45ffb9093fe2509bafb1a635ff8891c284293ca41fd6300acfe8477b5b1f18ada8be0c
 EBUILD quagga-0.99.22.ebuild 3548 SHA256 319b7af892dbff58155acb9ee2e4c90209754ddf65929d2ff1733f6903773b02 SHA512 af81cf225b297ac9d78bedd6b2065f3c7c1cda4505658b7de5df71382d3fdbf4752767b3cf0bca3b0a427f0d05d2f515102126590709ffeabc6e35ce94bd2abf WHIRLPOOL a0c4e5e6ec9f062e80bc0df237a4af5d60a6951222908d5b94ef345becf5a5e152407e6ea996441e0efbfedfde670bcdfa3ad8a5d69fd2e40565cc5f74bc154f
-MISC ChangeLog 24835 SHA256 6d30b3d597da5290837772e226790289aba85eace5dd0edc60cad3c1eb674055 SHA512 4c94b7b8d2036e7a226f94f16eeb23fbf451870682c333654c0e11289b3770ed6b1b8d010265c40ace5a30f62904b8efec9f60ecb542559d5e732c178054db70 WHIRLPOOL 0b237b3d9af2446c5e15f41ad78b3f0536e254fb6bdfa7cf86b5fdb62f5eb90c5e4b35bf86fe17a3ae48927cf8077cf37a05b67bab7e18ad143dec3679c7ef61
+MISC ChangeLog 24941 SHA256 12c9696c07253d16db53a4c6a0918bdf7e4752faffdcbd8b9cc5dd7622a051d8 SHA512 bb8f7108fc1d8a57505a47c12d8ce27dbbc84de633e4e908b69759bfa9eac0aeb2cdce6a47c7c7041a01d753d0fd83c103b491dbcdbba25a7ffd9936afd093b5 WHIRLPOOL 961520e38a303b9dfb3d712cc172367f7a4b465eb5b617cea062e44dd06dced9c913551e00ee3caf605385a164e5274a55e1f6d0f2ff55f49c6d501a94951ecd
 MISC metadata.xml 2125 SHA256 a8fa9b5faa1486306615e9088458960f5dc6463c88e672234f04ee5ac0874e68 SHA512 ba254525fd2dea2cbfc6f2b5a2d6e82c8c2d5ddecb5687c38faa14ea8ec53ebcd44a934b2f2350cfe0bf28a216d93773813a64388514a4079d92108796ea30a3 WHIRLPOOL 381fb94ef4954da55d87724b0590a7ee95129d6b365d95455a9909b8ff499c0de4f5856c9eb81f619308efd2edda9a3c88840ee5c5789bfd689618afe8280131
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRoMkBAAoJELp701BxlEWfQfAP/j5B9QanDkb9f431bf/VKjyD
-qmNSmAqJMFlPOGOdvKmkcx8+4CjBpUbY6eLXiJoY9z/63g4fT6fPebt92qMM51uP
-EVvV/gck/Jmp7T1aHmuhsRwEjiyPccuta07W0qFTrtDbMiYCMVvOSJA3d+/AoLn2
-kklUoMiCTjCLNrruPzLkg+9vf1uLRuihzkHAqGWabV8wskZixwwr1Q5i9TyAEnRv
-4rQZRK5McPx14egovi9bq6q2xYotk4ClDlXq7iICS/ObiSxaRbUTab1DkM8K/bPM
-ZiIpD4vaURKHak3SFsM0HO0Ud65QI+KqXzXAFsrfaiiNh648Z1IUTlewhn3tzIpi
-b1NCCpFT3fN249zEapfJUTjzLWvpv8rdiWCjtxiBJWsk6lzrkj4MkIM5zD5lBdbB
-NY22GfkQqPksljgWOJKZUChLAgW4gb6J4J8rdiwd3kG1qY29oqGgjvt7y1NAzl14
-h6lP8DsExvAUns8xZjlAbiJfEQ/YuzlY4j9sCMv+nNpOABdN1LSpYBelnhI2zWgJ
-s3KEi4XtZC+rb+AjwMIWpxeNSUZtNiR2TUMf2uePr9KteLzxWVZvDZ8Q86NFlQ2E
-bQtDStkklOmNMYTS27ENXG81Dxw4WyPJmnVk++LvEPND/QPvtd1+5pgAP8CXpwWm
-M/Hr2ndj7PbXzgslgSSt
-=wqW4
+iEYEAREIAAYFAlGg9FQACgkQVWmRsqeSphOQlwCdF/MmgMupbKQ3D9h0s8saerhf
+X9YAn2JK0PdsI+NY9axJV+rDZEhlNYhS
+=4SCv
 -----END PGP SIGNATURE-----
