@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libconfig
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libconfig/ChangeLog,v 1.59 2013/05/25 08:02:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libconfig/ChangeLog,v 1.60 2013/05/25 15:46:05 jer Exp $
+
+  25 May 2013; Jeroen Roovers <jer@gentoo.org> -libconfig-1.4.9.ebuild:
+  Old.
 
   25 May 2013; Agostino Sarubbo <ago@gentoo.org> libconfig-1.4.9-r1.ebuild:
   Stable for sparc, wrt bug #470392
