@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/quagga
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/quagga/ChangeLog,v 1.151 2013/05/25 14:24:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/quagga/ChangeLog,v 1.152 2013/05/25 17:26:42 jer Exp $
+
+  25 May 2013; Jeroen Roovers <jer@gentoo.org> quagga-0.99.22.1.ebuild:
+  Stable for HPPA (bug #464218).
 
   25 May 2013; Agostino Sarubbo <ago@gentoo.org> quagga-0.99.22.1.ebuild:
   Stable for alpha, wrt bug #464218
