@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/easy-rsa
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/easy-rsa/ChangeLog,v 1.8 2013/05/23 17:15:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/easy-rsa/ChangeLog,v 1.9 2013/05/25 17:24:49 jer Exp $
+
+  25 May 2013; Jeroen Roovers <jer@gentoo.org> easy-rsa-2.2.0-r1.ebuild:
+  Stable for HPPA (bug #470678).
 
   23 May 2013; Agostino Sarubbo <ago@gentoo.org> easy-rsa-2.2.0.ebuild:
   Stable for amd64, wrt bug #470678
